Fixed Nav z-indexing

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -43,6 +43,7 @@
       width: 80%;
       margin-left: 10%;
       padding-left: 0;
+      z-index: 99999;
     }
   
     &__item {
